--- a/app/Resources/views/mail/resetPassword.html.twig
+++ b/app/Resources/views/mail/resetPassword.html.twig
@@ -1,10 +1,10 @@
 <h2>
     Bonjour,
 </h2>
-<h3>Cette email à été généré automatiquement.</h3>
+<h3>Cet email à été généré automatiquement.</h3>
 <p>Voici le nouveau mot de passe de votre compte : {{ password }}</p>
-<p>Veuillez cliquer sur ce lien pour l'activer: http://localhost/OCP5_CatBot/web/app_dev.php/reset/password?token={{ token }}&password={{ password }}</p>
-<p>Nous vous conseillons de le changer dès que vous accéder à votre compte.</p>
+<p>Veuillez cliquer sur ce lien pour l'activer : http://localhost/OCP5_CatBot/web/app_dev.php/reset/password?token={{ token }}&password={{ password }}</p>
+<p>Nous vous conseillons de le changer dès que vous accédez à votre compte.</p>
 <p>Profil=> Mes paramètres => Changer de mot de passe</p>
 
 <br>
