--- a/app/Resources/views/main/actualites.html.twig
+++ b/app/Resources/views/main/actualites.html.twig
@@ -25,7 +25,7 @@
                   <img class="card-img-top" src="{{ asset('bundles/app/img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
                 </div>
                 <div class="card-title text-center px-3 mb-0">
-                  <p>{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
+                  <h6>{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
                   <h3><a href="{{ path('actualite', {'id': actualite.id}) }}">{{ actualite.title|upper }}</a></h3></div>
                 <div class="card-body text-justify"><p>{{ actualite.content|truncate(100,false,'...') }}</p></div>
               </div>
