--- a/src/AppBundle/Resources/public/css/profile.css
+++ b/src/AppBundle/Resources/public/css/profile.css
@@ -1,55 +1,3 @@
-img.separateur
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#titlePicture{
-    background: url("../img/profile_birds.jpg") no-repeat center;
-    background-size: cover;
-    height: 200px;
-}
-
-.observationPicture{
-    height: 10em;
-    border-radius: 25px;
-}
-
-.observation{
-    background: #f7f3f0;
-    border-radius: 25px;
-}
-.birdImage{
-    width: 200px;
-    border-radius: 25px;
-}
-
-.observationModalSection{
-    background-color: #C9C9C9;
-}
-
-
-.waitingObservationModal{
-    position: absolute;
-    width: 80%;
-    left:50%;
-    transform: translate(-50%,0)!important;
-    background-color: #5eb5e0;
-}
-
-@media (min-width: 576px){
-    .modal-dialog {
-        max-width: inherit;
-    }
-}
-
-img.separateur
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 #profileImg {
     height: 170px;
@@ -77,7 +25,7 @@ img.separateur
 
 .nav-tabs .nav-link {
     padding: 0;
-    color: #F7F3F1;
+    color: rgba(255, 254, 249, 0.7);
     position: relative;
     border: none;
     height: 130px;
@@ -98,6 +46,13 @@ img.separateur
     border-bottom-right-radius: 10px;
 }
 
+@media (min-width: 576px){
+    .nav-tabs .nav-link {
+        /* CSS RESPONSIVITE ONGLETS*/
+    }
+}
+
+/* RECOMPENSES */
 .progress {
     background: #DED5CD;
     border-radius: 25px;
@@ -108,4 +63,75 @@ img.separateur
     background: #6D49D1;
     height: 25px;
     padding: 5px 0 5px 0;
+}
+
+.recompense {
+    height: 100px;
+    max-width: 100px;
+}
+
+/* MES OBSERVATIONS */
+.observation{
+    background: #F7F3F1;
+    border-radius: 25px;
+}
+
+.observationModalSection{
+    background-color: #C9C9C9;
+}
+
+
+.waitingObservationModal{
+    position: absolute;
+    width: 80%;
+    left:50%;
+    transform: translate(-50%,0)!important;
+    background-color: #5eb5e0;
+}
+
+@media (min-width: 576px){
+    .modal-dialog {
+        max-width: inherit;
+    }
+}
+
+.bird-img-wrapper {
+    width: 100px;
+    height: 100px;
+}
+
+@media (min-width: 576px){
+    .bird-img-wrapper {
+        width: 150px;
+        height: 150px;
+    }
+}
+
+.bird-img{
+    height: 100%;
+    width: 100%;
+    border-radius: 23px;
+    object-fit: cover;
+}
+
+.fa-heart {
+    margin-top: 2px;
+    color: #6D49D1;
+}
+.heart-text { 
+    font-family: "Roboto", Arial, Sans-serif;
+    font-weight: 700;
+    font-size: 12px;
+    margin: 0;
+    color: #F7F3F1; 
+    text-align: center;
+    margin-bottom: .3em;
+    padding-left: 6px;
+}
+
+@media (min-width: 1400px) {
+    .col-xxl-5 {
+        flex: 0 0 38.6667% !important;
+        max-width: 38.6667% !important;
+    }
 }
