--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -114,10 +114,10 @@
     </div>
 
     <div class="container-fluid d-flex flex-wrap align-items-center justify-content-around" id="footerLinks">
-        <div class="col-6 col-sm-3 col-lg-2 my-4 my-md-0 order-sm-2">
+        <div class="col-6 col-sm-3 col-lg-2 my-5 my-md-0 order-sm-2">
             <img src="{{ asset('bundles/app/img/logo.svg') }}" alt="NAO_LOGO">
         </div>
-        <div class="col-12 col-sm-3 text-center my-4 my-md-0 order-sm-1">
+        <div class="col-12 col-sm-3 text-center mb-5 my-md-0 order-sm-1">
             <h1 class="mb-1" id="footer-title">NAO</h1>
             <i class="fa fa-facebook-official fa-2x m-2" aria-hidden="true"></i>
             <i class="fa fa-instagram fa-2x m-2" aria-hidden="true"></i>
@@ -126,11 +126,11 @@
             <i class="fa fa-youtube fa-2x m-2" aria-hidden="true"></i>
             <i class="fa fa-linkedin fa-2x m-2" aria-hidden="true"></i>
         </div>
-        <div class="col-12 col-sm-3 my-4 my-md-0 order-sm-3">
+        <div class="col-12 col-sm-3 mb-5 my-md-0 order-sm-3">
             <ul class="text-center nav flex-column">
-                <li class="nav-item"><a href="#" class="nav-link">A propos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="{{ path('aPropos') }}" class="nav-link">A propos</a></li>
+                <li class="nav-item"><a href="{{ path('contact') }}" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="{{ path('faq') }}" class="nav-link">FAQ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Copyright</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Mentions légales</a></li>
             </ul>
