--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -134,7 +134,7 @@
 	                    {% for userObservation in userObservations %}
 	                    	{# Carte oiseau observé #}
 	                        <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-	                            <div class="p-2 observation mx-auto">
+	                            <div class="p-2 bird-card mx-auto">
                                 	<div class="d-flex flex-nowrap">
                                         <div class="bird-img-wrapper">
                                             <img src="{{ userObservation.picture }}"
@@ -147,7 +147,7 @@
                                                     a {{ userObservation.updateAt | ago }}</p>
                                             </div>
                                             <div class="d-flex flex-column align-self-start">
-                                            	<h3 class="align-self-end text-left">{{ userObservation.bird.name | capitalize }}</h3>
+                                            	<h3 class="align-self-end text-left">étourneau améthyste</h3>
                                             	<p class="align-self-start m-0">{{ userObservation.user.username | capitalize }}</p>
                                             </div>
                                             <div class="align-self-end">
@@ -248,16 +248,15 @@
                 </div>
 
 				{# Google Map #}
-	            <div class="container goole-map mb-5">
-	                <div class="container"
-	                     style="height: 400px; border-radius: 20px; background-color: #999999"></div>
+	            <div class="goole-map mb-5 col-12 col-sm-10 col-lg-12 col-xxl-10 mx-auto px-0">
+	                <div style="height: 400px; border-radius: 20px; background-color: #999999"></div>
 	            </div>
 
 				{# Liste des validations en attente #}
 	            <div class="row justify-content-xl-center">
 	                {% for waitingObservation in waitingObservations %}
 	                    <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-	                        <div class="p-2 observation mx-auto">
+	                        <div class="p-2 bird-card mx-auto">
 	                        	<div class="d-flex flex-nowrap">
 	                                <div class="bird-img-wrapper">
 	                                    <img src="{{ waitingObservation.picture }}"
