CSS: Variables CSS + Déclaration des polices

--- a/app/Resources/views/main/contact.html.twig
+++ b/app/Resources/views/main/contact.html.twig
@@ -30,7 +30,7 @@
 		<div class="container">
 			<div class="heading">
 				<h3>Un problème ?</h3>
-				<p>Vous rencontrez un souci ou vous avez tout simplement quelques questions ? Jetez d’abord un oeil aux FAQ !<br>
+				<p>Vous rencontrez un souci ou vous avez tout simplement quelques questions ? Jetez d’abord un oeil aux <a href="{{ path('faq') }}">FAQ !</a><br>
 Si vous ne trouvez pas l’information que vous souhaitiez, n’hésitez pas à nous contacter à l’aide de ce formulaire !</p>
 			</div>
 			<div class="row">
