--- a/src/AppBundle/Resources/public/css/home.css
+++ b/src/AppBundle/Resources/public/css/home.css
@@ -4,7 +4,6 @@
   color: white;
   text-align: center;
   height: 105vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
   align-items: center;
@@ -14,7 +13,7 @@
 }
 
 #explication {
-    background-color: #FFFEF9;
+    background-color: var(--egg-shell);
     padding: 60px 0 60px 0;
 }
 
@@ -29,7 +28,7 @@
 }
 
 #pourquoi {
-    background-color: #F7F3F1;
+    background-color: var(--pampas);
     padding: 60px 0 200px 0;
     margin-bottom: -200px;
 }
@@ -38,22 +37,25 @@
     margin-bottom: 80px;
 }
 .home-title {
-    color: #FFFEF9;
-    font-size: 40px;
+  color: var(--egg-shell);
+  font-size: 60px;
+  line-height: 70px;
+  font-family: var(--hipsterish);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .home-heading {
-      margin-bottom: 160px;
+    margin-bottom: 160px;
   }
   .home-title {
-    font-size: 60px;
+    font-size: 80px;
+    line-height: 90px;
   }
 }
 
 .home-baseline {
-    font-family: "Roboto", Arial, sans-serif;
-    color: #FFFEF9;
+    font-family: var(--roboto);
+    color: var(--egg-shell);
     font-size: 12px;
     text-transform: uppercase;
 }
