--- a/src/AppBundle/Resources/public/css/actualite.css
+++ b/src/AppBundle/Resources/public/css/actualite.css
@@ -9,22 +9,14 @@
     height: 40px;
 }
 
-.comments {
-    margin-top: 20px;
-    height: 200px;
-    overflow: scroll;
-    border: 2px solid #dbd6d0;
-    border-radius: 25px;
-}
-
 .social-comment {
-    color: #6d49d1;
+    color: var(--purple);
 }
 
 .comm-display {
     border-radius: 25px !important;
     background: #FFFFFF;
-    border: 2px solid #DED5CD;
+    border: 2px solid var(--lightest-brown);
     margin-bottom: 0;
     height: 200px;
     max-height: 350px;
@@ -51,7 +43,7 @@
 .comm-display::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #6d49d1;
+  background-color: var(--purple);
 }
 
 #addComment .input-group {
