--- a/src/AppBundle/Resources/public/css/actualites.css
+++ b/src/AppBundle/Resources/public/css/actualites.css
@@ -1,5 +1,5 @@
 .card {
-	border: 2px solid #DED5CD;
+	border: 2px solid var(--lightest-brown);
     border-radius: 25px;
     background: #FFFFFF;
     margin: 0 15px 30px 15px;
