--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -1,27 +1,55 @@
+/* Variables */
+:root {
+  --purple: #6D49D1;
+  --darker-purple: #53399E;
+
+  --yellow:#FFD366;
+
+  --pampas: #F7F3F1;
+
+  --brown: #A89988;
+  --lighter-brown: #C1B7AB;
+  --lightest-brown: #DED5CD;
+
+  --off-white: #FFFDF8;
+  --egg-shell: #FFFEF9;
+  --lighter-egg-shell: rgba(255, 254, 249, 0.7);
+
+  --black: #262626;
+
+  --hipsterish: 'Hipsterish', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --raleway: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --roboto: Roboto, open-sans, sans-serif;
+}
+
 /* latin-ext */
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 400;
-    src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/Fcx7Wwv8OzT71A3E1XOAjvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/roboto/v18/Fcx7Wwv8OzT71A3E1XOAjvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
-
 
 /* latin-ext */
 @font-face {
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 400;
-    src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v12/yQiAaD56cjx1AooMTSghGfY6323mHUZFJMgTvxaG2iE.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/raleway/v12/yQiAaD56cjx1AooMTSghGfY6323mHUZFJMgTvxaG2iE.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
+@font-face {
+    font-family: 'Hipsterish';
+    src: local('HipsterishFontNormal.ttf'),
+          url(fonts/HipsterishFontNormal.eot),
+          url(fonts/HipsterishFontNormal.ttf);
+}
+
 body {
-    font-family: 'Roboto', Arial, sans-serif;
-    font-size: 16px;
-    background-color: #fffdf8;
-    color: #46484a;
+    font-family: var(--roboto);
+    font-size: 14px;
+    background-color: var(--off-white);
+    color: var(--black);
 }
 
 /*----------------
@@ -50,21 +78,21 @@ body {
     padding: 14px 24px;
     border: 0 none;
     border-radius: 50px;
-    color: #FFFFFF;
+    color: white;
     text-transform: uppercase;
 }
 
 .btn-primary {
-    background: #6d49d1;
+    background: var(--purple);
 }
 
 .btn-outline {
-    border: 2px solid #6D49D1;
-    color: #6d49d1;
+    border: 2px solid var(--purple);
+    color: var(--purple);
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-    background: #53399e;
+    background: var(--darker-purple);
 }
 
 /*----------------
@@ -75,7 +103,7 @@ body {
 .navbar {
     height: 50px;
     padding: 0 30px !important;
-    background: #FFFEF9;
+    background: var(--var(--egg-shell));
     position: relative;
     z-index: 999;
     margin-bottom: -30px;
@@ -87,7 +115,19 @@ body {
 }
 
 .navbar-brand {
-    font-family: "Raleway";
+  font-size: 32px;
+  line-height: 36px;
+  font-family: var(--hipsterish);
+  position: relative;
+  z-index: 1000;
+}
+
+@media (min-width: 768px) {
+  .navbar-brand {
+    font-size: 40px;
+    line-height: 46px;
+    padding-top: 15px;
+  }
 }
 
 .navbar .btn{
@@ -97,7 +137,7 @@ body {
 
 .navbar-svg {
   position: relative;
-  z-index: 999;
+  z-index: 998;
 }
 
 @media (min-width: 768px){
@@ -107,17 +147,17 @@ body {
 }
 
 .heading-page {
-    background-color: #F7F3F1;
+    background-color: var(--pampas);
     height: 200px;
     margin-top: -80px;
     padding-top: 100px;
     position: relative;
-    z-index: 998;
+    z-index: 997;
 }
 
 .wave-svg {
   position: relative;
-  z-index: 997;
+  z-index: 996;
 }
 
 /*----------------
@@ -130,23 +170,33 @@ body {
 }
 
 #footerNewsletter {
-    background: #c1b7ab;
+    background: var(--lighter-brown);
 }
 
 #footerLinks {
-    background: #53399e;
+    background: var(--darker-purple);
     min-height: 400px;
-    color: rgba(255, 254, 249, 0.7);
+    color: var(--lighter-egg-shell);
 }
 
 #footer-title {
-    color: rgba(255, 254, 249, 0.7);
+  color: var(--lighter-egg-shell);
+  font-size: 60px;
+  line-height: 70px;
+  font-family: var(--hipsterish);
+}
+
+@media (min-width: 768px) {
+  #footer-title {
+    font-size: 80px;
+    line-height: 90px;
+  }
 }
 
 #footerLinks li>a {
     font-size: 14px;
     text-transform: none;
-    color: rgba(255, 254, 249, 0.7);
+    color: var(--lighter-egg-shell);
 }
 
 #souscrire {
@@ -157,7 +207,7 @@ body {
 h1 {
   font-family: Raleway-Extralight;
   font-size: 36px;
-  color: #262626;
+  color: var(--black);
   letter-spacing: auto;
   line-height: 40px;
   text-transform: uppercase;
@@ -166,7 +216,7 @@ h1 {
 h2 {
   font-family: Raleway-Light;
   font-size: 24px;
-  color: #262626;
+  color: var(--black);
   letter-spacing: 2px;
   line-height: 28px;
   text-transform: uppercase;
@@ -175,25 +225,23 @@ h2 {
 h3, h3 > a {
   font-family: Raleway-Regular;
   font-size: 18px;
-  color: #262626;
   letter-spacing: 3px;
   line-height: 19px;
   text-transform: uppercase;
+  color: var(--black);
 }
 
 h4 {
   font-family: Raleway-Medium;
   font-size: 16px;
-  color: #262626;
   letter-spacing: 2.5px;
   line-height: 19px;
   text-transform: none;
 }
 
 h6 {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: var(--roboto);
   font-size: 12px;
-  color: #262626;
   letter-spacing: 2px;
   line-height: 19px;
   text-transform: uppercase;
@@ -204,10 +252,14 @@ p, span {
   line-height: 22px;
 }
 
+a {
+  color: var(--purple);
+}
+
 @media (min-width: 576px) {
   h1 {
     font-size: 60px;
-  line-height: 70px;
+    line-height: 70px;
   }
   h2 {
     font-size: 36px;
@@ -218,7 +270,6 @@ p, span {
 .heading span { 
   font-family: Raleway-Regular;
   font-size: 12px;
-  color: #262626;
   letter-spacing: 1px;
   line-height: 17px;
   text-transform: uppercase;
@@ -230,7 +281,6 @@ p, span {
   text-align: center;
   position: relative;
   text-align: center;
-  color: #262626;
   padding-bottom: 10px;
   margin-bottom: 60px;
 }
@@ -239,7 +289,7 @@ p, span {
     content: '';
     width: 16px;
     height: 1px;
-    background-color: #262626;
+    background-color: var(--black);
     position: absolute;
     left: -webkit-calc(50% - 8px);
     left: calc(50% - 8px);
@@ -272,21 +322,21 @@ textarea[placeholder] {
 }
 
 .input-group-icon {
-    color: rgba(255, 254, 249, 0.7);
+    color: var(--lighter-egg-shell);
     margin: -1px;
 }
 
 .input-group, .form-group {
     border-radius: 25px !important;
-    background: #FFFFFF;
-    border: 2px solid #DED5CD;
+    background: white;
+    border: 2px solid var(--lightest-brown);
     margin-bottom: 30px;
 }
 
 .input-group-addon {
     width: 36px;
     height: 36px;
-    background: #6d49d1;
+    background: var(--purple);
     border-radius: 25px !important;
     margin-right: 6px;
 }
