--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,6 +62,7 @@
                 </div>
             {% endif %}
         </nav>
+        {# SVG DE NAVBAR #}
         <div class="navbar-svg d-flex flex-column align-items-center">
             <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <desc>Aile</desc>
@@ -104,7 +105,7 @@
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="input-group align-items-center mb-0">
-                        <input type="text" class="form-control" placeholder="Email address">
+                        <input type="text" class="form-control" placeholder="Adresse email">
                         <a class="input-group-addon text-center" href="#"><i class="fa fa-envelope input-group-icon"></i></a>
                     </div>
                     <p class="text-muted">Votre email ne sera pas partagé</p>
@@ -135,6 +136,7 @@
                 <li class="nav-item"><a href="#" class="nav-link">Mentions légales</a></li>
             </ul>
         </div>
+        <a href="#" class="scrollToTop"><i class="fa fa-3x fa-angle-up"></i></a>
     </div>
 
 </div>
@@ -143,6 +145,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+    <script src="{{ asset('bundles/app/js/main.js') }}"></script>
 {% endblock %}
 </body>
 </html>
