--- a/app/Resources/views/main/faq.html.twig
+++ b/app/Resources/views/main/faq.html.twig
@@ -5,7 +5,56 @@
 {% endblock %}
 
 {% block body %}
+	<div class="container-fluid heading-page">
+	        <h1 class="text-center">FAQ</h1>
+	        <p class="text-center">Accueil >> FAQ</p>
+	    </div>
+	    <div class="wave-svg">
+	        <svg width="100%" height="100%" viewBox="0 0 1440 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+	            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+	                <g id="wave-driedwood">
+	                    <g transform="translate(720.000000, 40.000000) scale(1, -1) translate(-720.000000, -40.000000) ">
+	                        <g>
+	                            <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z" id="Rectangle-2-Copy" fill="#E7E1DC"></path>
+	                            <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z" id="Rectangle-2-Copy-2" fill="#F7F3F1"></path>
+	                        </g>
+	                    </g>
+	                </g>
+	            </g>
+	        </svg>
+	    </div>
 
+
+    	<section class="mt-5">
+    		<div class="container-fluid">
+    			<div class="heading">
+    				<h3>Un problème ?</h3>
+    				<p>Vous trouverez ici l'ensemble des réponses aux questions les plus récurrentes</p>
+    			</div>
+    			<div class="row align-items-center">
+    				<div class="col-12 col-xl-10 mx-auto">
+    					<div class="row px-2 px-xl-5">
+		    				<div class="col-12 col-sm-10 col-lg-5 mb-4 mx-auto nao-card px-4">
+								<h3 class="mt-4 text-center">Pourquoi poster une observation ?</h3>
+								<p class="text-justify">Nos Amis les Oiseaux vient de lancer une étude participative afin d'étudier les effets du climat, de l’urbanisation et de l’agriculture sur la biodiversité. Pour cela, NAO vous propose de renseigner toute observations d'oiseaux que vous avez pu rencontrer au grès de vos balades ou près de chez vous.</p>
+		    				</div>
+		    				<div class="col-12 col-sm-10 col-lg-5 mb-4 mx-auto nao-card px-4">
+								<h3 class="mt-4 text-center">Comment reconnaître un oiseau ?</h3>
+		    					<p class="text-justify">Il existe beaucoup d’espèces d'oiseaux différentes à travers le monde. Les connaitre toutes est difficile et nous avons donc mis en place un système de tri basé sur la couleur des pattes, du plumage et du bec, ainsi que sur la forme du bec qui vous permettra de retrouver l'oiseau que vous avez observé.</p>
+		    				</div>
+		    				<div class="col-12 col-sm-10 col-lg-5 mb-4 mx-auto nao-card px-4">
+								<h3 class="mt-4 text-center">Comment trouver ma localisation ?</h3>
+		    					<p class="text-justify">Lors de l'ajout d'une observation, vous pourrez, si vous êtes sur place, autoriser le partage de position pour remplir la localisation de l'observation. Si vous n’êtes plus sur place vous avez la possibilité d'ouvrir une carte Google qui vous permettra de sélectionner la position de l'observation.</p>
+		    				</div>
+		    				<div class="col-12 col-sm-10 col-lg-5 mb-4 mx-auto nao-card px-4">
+								<h3 class="mt-4 text-center">Comment fonctionnent les récompenses ?</h3>
+		    					<p class="text-justify">Dans votre compte, vous pouvez débloquer des médailles et des titres honorifiques. Pour cela, il vous suffit d'observer des oiseaux et de partager avec la communauté. Vous recevrez également des médailles en fonction de l'oiseau observé ! Essayez donc de trouver l'oiseau rare !</p>
+		    				</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+    	</section>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
