--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -134,7 +134,7 @@
 	                    {% for userObservation in userObservations %}
 	                    	{# Carte oiseau observé #}
 	                        <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-	                            <div class="p-2 bird-card mx-auto">
+	                            <div class="p-2 nao-card mx-auto">
                                 	<div class="d-flex flex-nowrap">
                                         <div class="bird-img-wrapper">
                                             <img src="{{ userObservation.picture }}"
@@ -256,7 +256,7 @@
 	            <div class="row justify-content-xl-center">
 	                {% for waitingObservation in waitingObservations %}
 	                    <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
-	                        <div class="p-2 bird-card mx-auto">
+	                        <div class="p-2 nao-card mx-auto">
 	                        	<div class="d-flex flex-nowrap">
 	                                <div class="bird-img-wrapper">
 	                                    <img src="{{ waitingObservation.picture }}"
@@ -285,11 +285,74 @@
 	                        </div>
 	                    </div>
 
+
+                        {# MODAL ROMAIN #}
+                        {#-------------#}
+                        {#----MODALE---#}
+                        {#-OBSERVATION-#}
+                        {#-------------#}
+                        <div id="waitingObservationModal_{{ loop.index }}" class="modal fade pt-5"
+                             role="dialog">
+                                <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+                                    <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                                        &times;
+                                    </button>
+                                </div>
+                            <div class="modal-dialog waitingObservationModal">
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="heading mt-5">
+                                        <h2>{{ waitingObservation.bird.name }}</h2>
+                                        <span>{{ waitingObservation.bird.name }}</span>
+                                    </div>
+
+                                    <div class="modal-body py-0 mb-5">
+                                        <div class="flex-wrap media align-items-center justify-content-center p-0">
+                                            <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ waitingObservation.bird.picture }}" alt="image {{ waitingObservation.bird.name }}">
+                                            <div class="media-body col-12 col-md-8 px-0">
+                                                <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
+                                                <p class="text-justify">{{ waitingObservation.bird.description }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal-footer pt-5">
+                                        <div class="container-fluid observationModalSection text-center">
+                                            <h3>OBSERVATION</h3>
+                                            <div class="col-12">
+                                                <div class="row align-items-center justify-content-center justify-content-md-start my-5">
+                                                    <img src="{{ asset('bundles/app/img/'~waitingObservation.user.profilePicture) }}" alt="" class="observation-avatar rounded-circle">
+                                                    <div class="text-sm-left ml-3">
+                                                        <p class="mb-1 user-name">{{ waitingObservation.user.username|capitalize }}</p>
+                                                        <span>{{ waitingObservation.updateAt|ago }}</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="modal-body py-0 mb-5">
+                                                <div class="flex-wrap media align-items-center justify-content-center p-0 col-12 col-md-6-">
+                                                    <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ waitingObservation.bird.picture }}" alt="image {{ waitingObservation.bird.name }}">
+                                                    <div class="media-body col-12 col-md-8 px-0">
+                                                        <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
+                                                        <p class="text-justify">{{ waitingObservation.bird.description }}</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="media-body">
+                                                <p class="text-center"></p>{{ waitingObservation.bird.description }}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
 	                    {#-------------#}
 	                    {#----MODALE---#}
 	                    {#-OBSERVATION-#}
 	                    {#-------------#}
-	                    <div id="waitingObservationModal_{{ loop.index }}" class="modal fade"
+	                    {# <div id="waitingObservationModal_{{ loop.index }}" class="modal fade"
 	                         role="dialog">
 	                        <div class="modal-dialog waitingObservationModal">
 
@@ -339,7 +402,8 @@
 	                            </div>
 
 	                        </div>
-	                    </div>
+	                    </div> #}
+
 	                {% endfor %}
 	            </div>
         	</div>
