--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -217,11 +217,16 @@ a {
 /* BANNIERE DE TITRE DE PAGE */
 .heading-page {
     background-color: var(--pampas);
-    height: 200px;
+    min-height: 200px;
     margin-top: -80px;
     padding-top: 100px;
+    padding-bottom: 5px;
     position: relative;
     z-index: 997;
+}
+
+.heading-page p {
+    margin-bottom: 5px;
 }
 
 .wave-svg {
@@ -373,4 +378,143 @@ textarea[placeholder] {
   opacity: 0.5;
   border-radius: 50%;
   text-align: center;
+  display: none;
+  text-decoration: none;
+}
+
+.scrollToTop:hover, .scrollToTop:visited, .scrollToTop::selection {
+  text-decoration: none;
+  color: var(--purple);
+}
+
+
+/* MES OBSERVATIONS */
+.nao-card{
+    background: var(--pampas);
+    border-radius: 25px;
+}
+
+.bird-img{
+    height: 100%;
+    width: 100%;
+    border-radius: 23px;
+    object-fit: cover;
+}
+
+.bird-img-wrapper {
+    width: 100px;
+    height: 100px;
+}
+
+@media (min-width: 576px){
+    .bird-img-wrapper {
+        width: 150px;
+        height: 150px;
+    }
+}
+
+.fa-heart {
+    margin-top: 2px;
+    color: var(--purple);
+}
+
+.heart-text { 
+    font-family: var(--roboto);
+    font-weight: 700;
+    font-size: 12px;
+    margin: 0;
+    color: var(--pampas); 
+    text-align: center;
+    padding-left: 7px;
+}
+
+@media (min-width: 1400px) {
+    .col-xxl-5 {
+        flex: 0 0 38.6667% !important;
+        max-width: 38.6667% !important;
+    }
+    .col-xxl-10 {
+        flex: 0 0 77.3334% !important;
+        max-width: 77.3334% !important;
+    }
+}
+
+/* Spé pour les écrans très petits */
+@media (max-width: 575px) {
+    .nao-card{
+        max-height: 116px;
+    }
+    .nao-card p.text-muted, .nao-card h3 {
+        margin-bottom: 0;
+    }
+    .fa-stack {
+        width: 24Px;
+        height: 24px;
+        padding-right: 15px;
+    }
+    .fa-stack .fa-heart {
+        font-size: 24px;
+    }
+    .heart-text {
+        font-size: 10px;
+        line-height: 12px;
+        padding-top: 2px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .nao-card h3, .nao-card h3 > a {
+      font-family: Raleway-Regular;
+      font-size: 14px;
+      color: var(--black);
+      letter-spacing: 1.5px;
+      line-height: 16px;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 12px ;
+      line-height: 16px;
+    }
+}
+/* MODAL */
+.close-wrap {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: none;
+  background: var(--purple) ;
+}
+
+.close-button {
+  font-size: 30px;
+  color: var(--egg-shell);
+}
+
+.waitingObservationModal{
+  position: absolute;
+  width: 80%;
+  left:50%;
+  transform: translate(-50%,0)!important;
+  background-color: none;
+}
+
+.modal-footer {
+  border-top: none;
+  background-color: var(--pampas);
+}
+
+.observation-avatar {
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+  object-fit: cover;
+}
+
+@media (min-width: 576px){
+  .modal-dialog {
+    max-width: inherit;
+  }
+}
+
+.user-name {
+  font-weight: 700;
 }
