--- a/src/AppBundle/Resources/public/css/observation.css
+++ b/src/AppBundle/Resources/public/css/observation.css
@@ -1,7 +1,4 @@
-#contain
-{
-    margin-top: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+#map {
+    height: 400px;
+    width: 400px;
 }
