--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -24,8 +24,9 @@
 
         <div id="map">
 
-                <button data-target="#us11-dialog" data-toggle="modal">Choisissez les coordonées</button>
-
+                <button data-target="#us11-dialog" data-toggle="modal">
+                    Choisissez les coordonées
+                </button>
 
         </div>
 
