CSS: Opti & Fix SVG issue

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,12 +67,8 @@
             <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <desc>Aile</desc>
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <g transform="translate(0.000000, -41.000000)">
-                        <g transform="translate(0.000000, 41.000000)">
-                            <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" id="Fill-1" fill="#FFFEF9"></path>
-                            <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" id="Fill-3" fill="#E7E7E7"></path>
-                        </g>
-                    </g>
+                    <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" fill="#FFFEF9"></path>
+                    <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
                 </g>
             </svg>
             <img class="navbar-logo" src="{{ asset('bundles/app/img/logo.svg') }}" alt="NAO_LOGO">
@@ -95,7 +91,14 @@
 ------------------ 
 ------------------#}
 <div id="footer">
-    <img src="{{ asset('bundles/app/img/footer/wave-brown.svg') }}" alt="vague" style="width: 100%">
+    <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="wave-brown">
+                <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z" fill="#A89988"></path>
+                <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z" fill-opacity="0.3" fill="#FFFFFF"></path>
+            </g>
+        </g>
+    </svg>
     <div class="container-fluid" id="footerNewsletter">
         <div class="container py-5 px-3 px-lg-5">
             <div class="row justify-content-center align-items-center" >
