--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -19,7 +19,14 @@
         </div>
     </div>
 
-    <img src="{{ asset('bundles/app/img/home/wave-cream.svg') }}" alt="vague" style="width: 100%">
+    <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="wave-cream">
+                <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z" fill="#F7F3F1"></path>
+                <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z" fill="#FFFEF9"></path>
+            </g>
+        </g>
+    </svg>
 
     <section id="explication">
         <div class="container">
@@ -66,7 +73,15 @@
     </section>
 
     {#POURQUOI?#}
-    <img src="{{ asset('bundles/app/img/home/wave-sand.svg') }}" alt="vague" style="width: 100%">
+    <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="wave-driedwood-flipped" transform="translate(720.000000, 40.000000) scale(-1, 1) translate(-720.000000, -40.000000) ">
+                <path d="M0,52 C0,52 153,1.46804748e-14 378.5,0 C604,0 836,52 1005,52 C1174,52 1440,0 1440,0 L1440,80 L0,80 L0,52 Z" fill="#E7E1DC"></path>
+                <path d="M0,78 C0,78 153,26 378.5,26 C604,26 836,78 1005,78 C1174,78 1440,26 1440,26 L1440,80 L0,80 L0,78 Z" fill="#F7F3F1"></path>
+            </g>
+        </g>
+    </svg>
+
     <section id="pourquoi">
         <div class="container-fluid">
             <div class="card bg-transparent text-center mx-auto">
