Page observation, google map à mettre à jour avec localisation des oiseaux

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="{{ path('observation') }}">OBSERVATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OISEAUX</a>
+                        <a class="nav-link" href="{{ path('oiseaux') }}">OISEAUX</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('actualites') }}">ACTUALITÉS</a>
